name:           hledger
version: 0.24.1
stability:      stable
category:       Finance, Console
synopsis:       The main command-line interface for the hledger accounting tool.
description:
                hledger is a library and set of user tools for working
                with financial data (or anything that can be tracked in a
                double-entry accounting ledger.) It is a haskell port and
                friendly fork of John Wiegley's Ledger. hledger provides
                command-line, curses and web interfaces, and aims to be a
                reliable, practical tool for daily use.

license:        GPL
license-file:   LICENSE
author:         Simon Michael <simon@joyful.com>
maintainer:     Simon Michael <simon@joyful.com>
homepage:       http://hledger.org
bug-reports:    http://hledger.org/bugs
tested-with:    GHC==7.2.2, GHC==7.4.2, GHC==7.6.3, GHC==7.8.2
cabal-version:  >= 1.10
build-type:     Simple
-- data-dir:       data
-- data-files:
extra-tmp-files:
extra-source-files: 
                    tests/suite.hs
                    CHANGES

-- Cabal-Version:  >= 1.9.2
-- Test-Suite test-hledger
--     type:       exitcode-stdio-1.0
--     main-is:    test-hledger.hs
--     build-depends: base

source-repository head
  type:     git
  location: https://github.com/simonmichael/hledger

flag threaded
    Description:   Build with support for multithreaded execution
    Default:       True


library
  cpp-options: -DVERSION="0.24.1"
  ghc-options: -Wall -fno-warn-unused-do-bind -fno-warn-name-shadowing -fno-warn-missing-signatures
  ghc-options: -fno-warn-type-defaults -fno-warn-orphans
  default-language: Haskell2010
  exposed-modules:
                  Hledger.Cli
                  Hledger.Cli.Main
                  Hledger.Cli.Options
                  Hledger.Cli.Tests
                  Hledger.Cli.Utils
                  Hledger.Cli.Version
                  Hledger.Cli.Add
                  Hledger.Cli.Accounts
                  Hledger.Cli.Balance
                  Hledger.Cli.Balancesheet
                  Hledger.Cli.Cashflow
                  Hledger.Cli.Histogram
                  Hledger.Cli.Incomestatement
                  Hledger.Cli.Print
                  Hledger.Cli.Register
                  Hledger.Cli.Stats
  build-depends:
                  hledger-lib == 0.24.1
                 ,base >= 4.3 && < 5
                 -- ,cabal-file-th
                 ,containers
                 ,cmdargs >= 0.10 && < 0.11
                 ,csv
                 -- ,data-pprint >= 0.2.1 && < 0.3
                 ,directory
                 ,filepath
                 ,haskeline >= 0.6 && <= 0.8
                 ,HUnit
                 ,mtl
                 ,old-locale
                 ,old-time
                 ,parsec >= 3
                 ,process
                 ,regex-tdfa
                 ,regexpr >= 0.5.1
                 ,safe >= 0.2
-- http://www.yesodweb.com/blog/2014/04/consolidation-progress
-- in order to support both the old and new versions of shakespeare,
-- you just need to ensure that you have both the shakespeare and
-- deprecated packages listed in your cabal file. In other words, if
-- previously you depended on hamlet, now you should depend on hamlet
-- and shakespeare. When you're ready to drop backwards compatibility,
-- simply put a lower bound of >= 2.0 on shakespeare and remove the
-- deprecated packages.
                 ,shakespeare-text >= 1.0 && < 1.2
                 ,shakespeare      >= 1.0 && < 2.1
                 ,split >= 0.1 && < 0.3
                 ,text >= 0.11
                 ,tabular >= 0.2 && < 0.3
                 ,time
                 ,utf8-string >= 0.3.5 && < 1.1
                 ,wizards == 1.0.*
  if impl(ghc >= 7.4)
    build-depends: pretty-show >= 1.6.4


executable hledger
  main-is:        hledger-cli.hs
  hs-source-dirs: app
  default-language: Haskell2010
  cpp-options: -DVERSION="0.24.1"
  ghc-options: -Wall -fno-warn-unused-do-bind -fno-warn-name-shadowing -fno-warn-missing-signatures
  ghc-options: -fno-warn-type-defaults -fno-warn-orphans
  if flag(threaded)
       ghc-options:   -threaded
  -- same as above:
  build-depends:
                  hledger-lib == 0.24.1
                 ,hledger == 0.24.1
                 ,base >= 4.3 && < 5
                 ,containers
                 ,cmdargs >= 0.10 && < 0.11
                 ,csv
                 -- ,data-pprint >= 0.2.1 && < 0.3
                 ,directory
                 ,filepath
                 ,haskeline >= 0.6 && <= 0.8
                 ,HUnit
                 ,mtl
                 ,old-locale
                 ,old-time
                 ,parsec >= 3
                 ,process
                 ,regex-tdfa
                 ,regexpr >= 0.5.1
                 ,safe >= 0.2
                 ,shakespeare-text >= 1.0 && < 1.2
                 ,shakespeare      >= 1.0 && < 2.1
                 ,split >= 0.1 && < 0.3
                 ,tabular >= 0.2 && < 0.3
                 ,text >= 0.11
                 ,time
                 ,utf8-string >= 0.3.5 && < 1.1
                 ,wizards == 1.0.*
  if impl(ghc >= 7.4)
    build-depends: pretty-show >= 1.6.4


test-suite tests
  type:     exitcode-stdio-1.0
  main-is:  suite.hs
  hs-source-dirs: tests
  default-language: Haskell2010
  ghc-options: -Wall -fno-warn-unused-do-bind -fno-warn-name-shadowing -fno-warn-missing-signatures
  ghc-options: -fno-warn-type-defaults -fno-warn-orphans
  -- same as above:
  build-depends: hledger-lib
               , hledger
               , base >= 4.3 && < 5
               , cmdargs
               , containers
               , csv
               -- , data-pprint >= 0.2.1 && < 0.3
               , directory
               , filepath
               , haskeline
               , HUnit
               , mtl
               , old-locale
               , old-time
               , parsec >= 3
               , process
               , regex-tdfa
               , regexpr
               , safe
               , shakespeare-text >= 1.0 && < 1.2
               , shakespeare      >= 1.0 && < 2.1
               , split
               ,tabular >= 0.2 && < 0.3
               , test-framework
               , test-framework-hunit
               , text
               , time
               , transformers
               , wizards == 1.0.*
  if impl(ghc >= 7.4)
    build-depends: pretty-show >= 1.6.4


-- not a standard cabal bench test, I think
benchmark bench
  type:             exitcode-stdio-1.0
  -- hs-source-dirs:   
  main-is:          ../tools/simplebench.hs
  ghc-options: -Wall -fno-warn-unused-do-bind -fno-warn-name-shadowing -fno-warn-missing-signatures
  ghc-options: -fno-warn-type-defaults -fno-warn-orphans
  default-language: Haskell2010
  build-depends:    hledger-lib,
                    hledger,
                    base >= 4.3 && < 5,
                    old-locale,
                    time,
                    html,
                    tabular >= 0.2 && < 0.3,
                    process,
                    filepath,
                    directory
  
